v2.7
    Fix to work with game version 1.4.
========================================================================
v2.6
    Names for careers are now obtained from one of the game's data
    tables, instead of being hard coded. I think this *should* make
    it so /whom can recognize career archetypes correctly in
    non-English versions of the game. I have not been able to
    test this, however.
========================================================================
v2.5.1
    Will now handle the case of 30+ characters of the same level
    and class in the same zone, by searching by name if necessary
    to avoid overflow
========================================================================
v2.4
    The game function to get the list of all zones omits the Necropolis,
    which caused whom to overlook people in that zone. Whom now
    explicitly adds Necropolis to the zone list. 
========================================================================
v2.3
    Output goes to the "System General" channel now instead of the "Say"
    channel, to match 1.3.5's move of /who output to there.
========================================================================
v2.2
    "/whom sc" will now only count and show players in your tier.
    Before, it would count players of all ranks.

    It is now a bit faster on searches that are going to find a
    lot of players.

    "/whom trinity" will show members of the Gaiscioch guilds.
    This was actually in v2.0, but I didn't document it. This is
    probably only interesting to people playing Order on Badlands.
========================================================================