@@ -1,5 +1,6 @@
 v2.7
-    Fix to work with game version 1.4.
+    Fix to work with game version 1.4 as is currently on the test
+    server. This version also works with 1.3.6 on the live server.
 ========================================================================
 v2.6
     Names for careers are now obtained from one of the game's data
